# librustpvix

./: Cargo.toml  README.md
components/pivx_address/: Cargo.toml
components/pivx_address/src/: convert.rs  lib.rs
components/pivx_address/src/kind/: unified.rs
components/pivx_address/src/kind/unified/: address.rs
components/pivx_encoding/: Cargo.toml
components/pivx_encoding/src/: lib.rs
components/pivx_note_encryption/: Cargo.toml
components/pivx_note_encryption/src/: lib.rs
pivx_client_backend/: Cargo.toml
pivx_client_backend/examples/: diversify-address.rs
pivx_client_backend/src/: address.rs  data_api.rs  decrypt.rs  encoding.rs  fees.rs  keys.rs  lib.rs  proto.rs  scan.rs  wallet.rs  welding_rig.rs  zip321.rs
pivx_client_backend/src/data_api/: chain.rs  error.rs  wallet.rs
pivx_client_backend/src/data_api/chain/: error.rs
pivx_client_backend/src/data_api/wallet/: input_selection.rs
pivx_client_backend/src/fees/: fixed.rs  zip317.rs
pivx_client_sqlite/: Cargo.toml
pivx_client_sqlite/src/: chain.rs  error.rs  lib.rs  prepared.rs  wallet.rs
pivx_client_sqlite/src/wallet/: init.rs  transact.rs
pivx_client_sqlite/src/wallet/init/: migrations.rs
pivx_client_sqlite/src/wallet/init/migrations/: add_transaction_views.rs  add_utxo_account.rs  addresses_table.rs  ufvk_support.rs
pivx_extensions/: Cargo.toml
pivx_extensions/src/consensus/: transparent.rs
pivx_extensions/src/transparent/: demo.rs
pivx_history/: Cargo.toml
pivx_primitives/: Cargo.toml
pivx_primitives/benches/: note_decryption.rs  pedersen_hash.rs
pivx_primitives/src/: block.rs  consensus.rs  legacy.rs  lib.rs  merkle_tree.rs
pivx_primitives/src/constants/: mainnet.rs  testnet.rs
pivx_primitives/src/merkle_tree/: incremental.rs
pivx_primitives/src/sapling/: keys.rs  note.rs  note_encryption.rs
pivx_primitives/src/transaction/: mod.rs  sighash_v4.rs  sighash_v5.rs
pivx_primitives/src/transaction/components/: orchard.rs  sapling.rs  tze.rs
pivx_primitives/src/transaction/components/sapling/: #builder.rs#
pivx_proofs/: Cargo.toml
pivx_proofs/benches/: sapling.rs
pivx_proofs/src/: constants.rs  prover.rs
pivx_proofs/src/circuit/: ecc.rs  pedersen_hash.rs  sapling.rs
pivx_proofs/src/sapling/: prover.rs  verifier.rs
pivx_proofs/src/sapling/verifier/: batch.rs  single.rs
zcash_primitives/src/constants/: mainnet.rs  testnet.rs
zcash_primitives/src/transaction/: mod.rs
zcash_primitives/src/transaction/components/sapling/: builder.rs
