[workspace]
members = [
    "components/equihash",
    "components/f4jumble",
    "components/pivx_address",
    "components/pivx_encoding",
    "components/pivx_note_encryption",
    "pivx_client_backend",
    "pivx_client_sqlite",
    "pivx_extensions",
    "pivx_history",
    "pivx_primitives",
    "pivx_proofs",
]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[patch.crates-io]
pivx_encoding = { path = "components/pivx_encoding" }
pivx_note_encryption = { path = "components/pivx_note_encryption" }
