[package]
name = "pivx_client_sqlite"
description = "An SQLite-based Zcash light client"
version = "0.5.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kris Nuttycombe <kris@electriccoin.co>"
]
homepage = "https://github.com/pivx/librustpivx"
repository = "https://github.com/pivx/librustpivx"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
pivx_client_backend = { version = "0.7", path = "../pivx_client_backend" }
pivx_primitives = { version = "0.10", path = "../pivx_primitives" }

# Dependencies exposed in a public API:
# (Breaking upgrades to these require a breaking upgrade to this crate.)
# - Errors
bs58 = { version = "0.4", features = ["check"] }
hdwallet = { version = "0.3.1", optional = true }

# - Logging and metrics
tracing = "0.1"

# - Protobuf interfaces
prost = "0.11"

# - Secret management
secrecy = "0.8"

# - SQLite databases
group = "0.12"
jubjub = "0.9"
rusqlite = { version = "0.25", features = ["bundled", "time", "array"] }
schemer = "0.2"
schemer-rusqlite = "0.2.1"
time = "0.2"
uuid = "1.1"

# Dependencies used internally:
# (Breaking upgrades to these are usually backwards-compatible, but check MSRVs.)

[dev-dependencies]
assert_matches = "1.5"
proptest = "1.0.0"
rand_core = "0.6"
regex = "1.4"
tempfile = "3"
pivx_note_encryption = { version = "0.2", path = "../components/pivx_note_encryption" }
pivx_proofs = { version = "0.10", path = "../pivx_proofs" }
pivx_primitives = { version = "0.10", path = "../pivx_primitives", features = ["test-dependencies"] }
pivx_address = { version = "0.2", path = "../components/pivx_address", features = ["test-dependencies"] }

[features]
mainnet = []
test-dependencies = [
    "pivx_primitives/test-dependencies",
    "pivx_client_backend/test-dependencies",
]
transparent-inputs = ["hdwallet", "pivx_client_backend/transparent-inputs"]
unstable = ["pivx_client_backend/unstable"]

[lib]
bench = false
