[package]
name = "pivx_extensions"
description = "Zcash Extension implementations & consensus node integration layer."
version = "0.0.0"
authors = ["Jack Grigg <jack@z.cash>", "Kris Nuttycombe <kris@z.cash>"]
homepage = "https://github.com/pivx/librustpivx"
repository = "https://github.com/pivx/librustpivx"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
blake2b_simd = "1"
pivx_primitives = { version = "0.10", path = "../pivx_primitives", features = ["zfuture" ] }

[dev-dependencies]
ff = "0.12"
jubjub = "0.9"
rand_core = "0.6"
pivx_address = { version = "0.2", path = "../components/pivx_address" }
pivx_proofs = { version = "0.10", path = "../pivx_proofs" }

[features]
transparent-inputs = []

[lib]
bench = false
