[package]
name = "pivx_address"
description = "Zcash address parsing and serialization"
version = "0.2.0"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
]
homepage = "https://github.com/pivx/librustpivx"
repository = "https://github.com/pivx/librustpivx"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.52"
categories = ["cryptography::cryptocurrencies", "encoding"]
keywords = ["pivx", "address", "sapling", "unified"]

[dependencies]
bech32 = "0.8"
bs58 = { version = "0.4", features = ["check"] }
f4jumble = { version = "0.1", path = "../f4jumble" }
pivx_encoding = { version = "0.2", path = "../pivx_encoding" }

[dev-dependencies]
assert_matches = "1.3.0"
proptest = "1"

[features]
test-dependencies = []

[lib]
bench = false
